# telegram_channel_dublicator

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.py
configs/: .env.example
